--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.datasource.data=classpath:/data/h2/data.sql
 spring.jpa.show-sql=true
 
 #hibernate.hbm2ddl.auto=update
-#spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 
 # cartservice
@@ -28,15 +28,16 @@ spring.jpa.show-sql=true
 #app.datasource.url=jdbc:mysql://mysqlEndpoint:3306/mysqlDBName
 #app.datasource.username=mysqlDBUsername
 #app.datasource.password=mysqlDBPassword
-#
+#spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
 # Show or not log for each sql query
-#spring.jpa.show-sql = true
+#spring.jpa.show-sql=true
 #
 # Naming strategy
 #
 #spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 #
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 #
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
